@@ -58,7 +58,10 @@
 =head2 5.27 - Jul</pre>
 <pre>
    style updates to Ezmlm.pm and fix test failures in t/Ezmlm.t
-   maillogs fails more gracefully when the log files are unreadable</pre>
+   maillogs fails more gracefully when the log files are unreadable
+   POD doc cleanups
+   fixed inverted regexp match that caused control/me to be set to the system
+     hostname instead of toaster-watcher.conf configured value</pre>
 <p>
 </p>
 <h2><a name="5_26___jun_31__2010">5.26 - Jun 31, 2010</a></h2>
