@@ -80,15 +80,7 @@
 <pre>
            help - print this usage screen
          config - initial configuration of toaster*.conf files
-           perl - installs or upgrades perl
             pre - installs a list of programs and libraries other toaster components need</pre>
-<pre>
-                     FreeBSD Specific
-          ports - updates your ports tree, installs the pkg_* tools
-        sources - update your FreeBSD sources (/usr/src)
-        jailadd - creates a new jail
-      jailstart - starts up an existing jail
-     jaildelete - deletes an existing jail</pre>
 <pre>
                     Standard Daemons &amp; Utilities
           mysql - installs MySQL
@@ -125,7 +117,6 @@
           razor - installs the razor2 agents
        maildrop - installs maildrop and mailfilter
          clamav - installs just ClamAV
-   qmailscanner - installs Qmail-Scanner &amp; qmailscanner stats
         simscan - install simscan
         simconf - configure simscan 
         simtest - run email tests to verify that simscan is working
@@ -134,7 +125,6 @@
 <pre>
                   Logs, Statistics, and Monitoring
        maillogs - creates the mail logging directories
-            qss - installs qmailscanner stats
         socklog - installs socklog
         isoqlog - installs and configured isoqlog
       supervise - creates the directories to be used by svscan</pre>
@@ -146,8 +136,6 @@
  imap|pop3|smtp - do authentication test for imap, pop3, or smtp-auth</pre>
 <pre>
         toaster - install Mail::Toaster
-     mattbundle - install MATT::Bundle
-            mrm - install Mysql::Replication
      logmonster - install Apache::Logmonster
         nictool - install nictool (<a href="http://www.nictool.com/">http://www.nictool.com/</a>)
             all - installs everything shown on the toaster INSTALL page</pre>
