@@ -140,9 +140,6 @@
   install_apache_user            = www</pre>
 <p>Set install_apache_user to the username that apache will run under. The &quot;www&quot; is is very popular, as is &quot;nobody&quot;.</p>
 <pre>
-  install_apache2_modperl        = 1</pre>
-<p>If this is set to 1, and install_apache is set to 2, then mod_perl 2 will be built and installed.</p>
-<pre>
   install_mysql                  = 4   # 0, 1, 2, 3, 40, 41, 5</pre>
 <p>You can choose from a variety of MySQL version to install. The code meanings are as follows:</p>
 <pre>
