@@ -2,6 +2,9 @@ Mail Toaster Changes
   5.27 - Jul
        style updates to Ezmlm.pm and fix test failures in t/Ezmlm.t
        maillogs fails more gracefully when the log files are unreadable
+       POD doc cleanups
+       fixed inverted regexp match that caused control/me to be set to the system
+         hostname instead of toaster-watcher.conf configured value
 
   5.26 - Jun 31, 2010
        added php build and post-install config (php.ini) support for freebsd
